force-app/main/default/objects/Opportunity_Line_Item__c/fields/Commission_In_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Commission_In_Percentage__c</fullName>
    <label>Commission In %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>