force-app/main/default/objects/Opportunity_Line_Item__c/fields/Commission_Per_Order__c.field-meta.xml
<CustomField>
    <fullName>Commission_Per_Order__c</fullName>
    <label>Commission Per Order</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>