force-app/main/default/objects/Opportunity_Line_Item__c/fields/Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type__c</fullName>
    <formula>IF(ISPICKVAL(Commission_Type_Picklist__c, &apos;&apos;), 
TEXT(Id_List_Service_Price__r.Commission_Type__c), 
TEXT(Commission_Type_Picklist__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Type</label>
    <type>Text</type>
</CustomField>