force-app/main/default/objects/Opportunity_Line_Item__c/fields/Commission_Type_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type_Picklist__c</fullName>
    <description>In this field it will be copy the info from the list service price to keep the original value on the creation of the line item, the field Commission_Type will have to be delete in the future SP-3440</description>
    <label>Commission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Per Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>