force-app/main/default/objects/Opportunity_Line_Item__c/fields/ContractAddition__c.field-meta.xml
<CustomField>
    <fullName>ContractAddition__c</fullName>
    <label>Contract Addition</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>