force-app/main/default/objects/Opportunity_Line_Item__c/fields/Deposit_Method__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Method__c</fullName>
    <label>Deposit Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>