force-app/main/default/objects/Opportunity_Line_Item__c/fields/Design_Note__c.field-meta.xml
<CustomField>
    <fullName>Design_Note__c</fullName>
    <label>Design Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>