force-app/main/default/objects/Opportunity_Line_Item__c/fields/Id_List_Price_Product__c.field-meta.xml
<CustomField>
    <fullName>Id_List_Price_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>List Product Price</label>
    <referenceTo>List_Product_Price__c</referenceTo>
    <relationshipLabel>Opportunity Line Items</relationshipLabel>
    <relationshipName>Opportunity_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>