force-app/main/default/objects/Opportunity_Line_Item__c/fields/Id_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Id_Opportunity__c</fullName>
    <label>Id Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Line Items</relationshipLabel>
    <relationshipName>Opportunity_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>