force-app/main/default/objects/Opportunity_Line_Item__c/fields/Id_Replacement_Order__c.field-meta.xml
<CustomField>
    <fullName>Id_Replacement_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id Replacement Order</label>
    <referenceTo>Replacement_Order__c</referenceTo>
    <relationshipLabel>Opportunity Line Items</relationshipLabel>
    <relationshipName>Opportunity_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>