force-app/main/default/objects/Opportunity_Line_Item__c/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <label>Interval</label>
    <length>25</length>
    <type>Text</type>
</CustomField>