force-app/main/default/objects/Opportunity_Line_Item__c/fields/Line_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Type__c</fullName>
    <label>Line Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>AddOn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>