force-app/main/default/objects/Opportunity_Line_Item__c/fields/Max__c.field-meta.xml
<CustomField>
    <fullName>Max__c</fullName>
    <label>Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>