force-app/main/default/objects/Opportunity_Line_Item__c/fields/Midas_Exception__c.field-meta.xml
<CustomField>
    <fullName>Midas_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field that indicates whether there was an exception when approving/canceling a booking in Midas</description>
    <inlineHelpText>Field that indicates whether there was an exception when approving/canceling a booking in Midas</inlineHelpText>
    <label>Midas Exception</label>
    <type>Checkbox</type>
</CustomField>