force-app/main/default/objects/Opportunity_Line_Item__c/fields/MIgration_ID__c.field-meta.xml
<CustomField>
    <fullName>MIgration_ID__c</fullName>
    <label>MIgration ID</label>
    <type>TextArea</type>
</CustomField>