force-app/main/default/objects/Opportunity_Line_Item__c/fields/OldOppQuoteLineId__c.field-meta.xml
<CustomField>
    <fullName>OldOppQuoteLineId__c</fullName>
    <externalId>true</externalId>
    <label>OldOppQuoteLineId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>