force-app/main/default/objects/Opportunity_Line_Item__c/fields/Online_Payment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Online_Payment_Fee__c</fullName>
    <label>Online Payment Fee</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>