force-app/main/default/objects/Opportunity_Line_Item__c/fields/Position_fm__c.field-meta.xml
<CustomField>
    <fullName>Position_fm__c</fullName>
    <formula>CASE(Position__c, &quot;1&quot;,&quot;First position&quot;,&quot;2&quot;,&quot;Second position&quot;,&quot;3&quot;,&quot;Third position&quot;,&quot;4&quot;,&quot;Fourth position&quot;,&quot;5&quot;,&quot;Fifth position&quot;, Position__c)</formula>
    <label>Position</label>
    <type>Text</type>
</CustomField>