force-app/main/default/objects/Opportunity_Line_Item__c/fields/Sales_Area_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Area_Id__c</fullName>
    <description>Booking Sales Area Id</description>
    <label>Sales Area Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>