force-app/main/default/objects/Opportunity_Line_Item__c/fields/Source_GRID__c.field-meta.xml
<CustomField>
    <fullName>Source_GRID__c</fullName>
    <label>Source GRID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>