force-app/main/default/objects/Opportunity_Line_Item__c/fields/Sub_type__c.field-meta.xml
<CustomField>
    <fullName>Sub_type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Line_Item_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Transmission Fee</fullName>
            </value>
            <value>
                <fullName>Commission Fee</fullName>
            </value>
            <value>
                <fullName>Online Payment Fee</fullName>
            </value>
            <value>
                <fullName>White Label Website Fee</fullName>
            </value>
            <value>
                <fullName>Order Now Button Fee</fullName>
            </value>
            <value>
                <fullName>RFV Discount</fullName>
            </value>
            <value>
                <fullName>Branding Discount</fullName>
            </value>
            <value>
                <fullName>White Label Website Discount</fullName>
            </value>
            <value>
                <fullName>Order Now Button Discount</fullName>
            </value>
            <value>
                <fullName>Exclusive Branding Discount</fullName>
            </value>
            <value>
                <fullName>Fixed Amount</fullName>
            </value>
            <value>
                <fullName>Terminal Box</fullName>
            </value>
            <value>
                <fullName>Voucher</fullName>
            </value>
            <value>
                <fullName>Pizza Cartons</fullName>
            </value>
            <value>
                <fullName>Menu Printing</fullName>
            </value>
            <value>
                <fullName>Recurring Fee</fullName>
            </value>
            <value>
                <fullName>Monthly Box Fee</fullName>
            </value>
            <value>
                <fullName>Setup Fee</fullName>
            </value>
            <value>
                <fullName>Promotions</fullName>
            </value>
            <value>
                <fullName>Annual Fee</fullName>
            </value>
            <value>
                <fullName>Renewal Fee</fullName>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Premium Placement</fullName>
            </value>
            <value>
                <fullName>Apron</fullName>
            </value>
            <value>
                <fullName>Caps</fullName>
            </value>
            <value>
                <fullName>Heating Bag</fullName>
            </value>
            <value>
                <fullName>Notepads and Pens</fullName>
            </value>
            <value>
                <fullName>Roofie</fullName>
            </value>
            <value>
                <fullName>T-shirt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>