force-app/main/default/objects/Opportunity_Line_Item__c/recordTypes/CD_Opportunity_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>CD_Opportunity_Line_Item</fullName>
    <active>true</active>
    <label>CD Opportunity Line Item</label>
</RecordType>