force-app/main/default/objects/Opportunity_Line_Item__c/recordTypes/FI_Opportunity_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>FI_Opportunity_Line_Item</fullName>
    <active>true</active>
    <label>FI Opportunity Line Item</label>
</RecordType>