force-app/main/default/objects/Opportunity_Line_Item__c/recordTypes/FP_Opportunity_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>FP_Opportunity_Line_Item</fullName>
    <active>true</active>
    <label>FP Opportunity Line Item</label>
</RecordType>