force-app/main/default/objects/Opportunity_Line_Item__c/recordTypes/HU_Opportunity_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>HU_Opportunity_Line_Item</fullName>
    <active>true</active>
    <description>Hungary Opportunity Line Item</description>
    <label>HU Opportunity Line Item</label>
</RecordType>