force-app/main/default/objects/Opportunity_Line_Item__c/recordTypes/PY_Opportunity_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>PY_Opportunity_Line_Item</fullName>
    <active>true</active>
    <label>PY Opportunity Line Item</label>
</RecordType>