force-app/main/default/objects/Opportunity_Line_Item__c/recordTypes/Talabat_Opportunity_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>Talabat_Opportunity_Line_Item</fullName>
    <active>true</active>
    <label>Talabat Opportunity Line Item</label>
</RecordType>