force-app/main/default/objects/Opportunity_Line_Item__c/recordTypes/UK_Opportunity_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>UK_Opportunity_Line_Item</fullName>
    <active>true</active>
    <label>UK Opportunity Line Item</label>
</RecordType>