force-app/main/default/objects/Opportunity_Line_Item__c/validationRules/Not_Courier_Commision.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Courier_Commision</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Id_Opportunity__r.Account.Courier_Service__c),
								 ISPICKVAL(Sub_type__c, &apos;Courier Fee&apos;)  
												)</errorConditionFormula>
    <errorMessage>You can not sell a Courier Commission if the Account is not using Courier Services. Please fill the field &quot;Courier Service&quot; accordingly</errorMessage>
</ValidationRule>