force-app/main/default/objects/Opportunity_Line_Item__c/validationRules/Only_Courier_Commision.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Courier_Commision</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Id_Opportunity__r.Account.Courier_Service__c)),
					NOT( ISPICKVAL(Sub_type__c, &apos;Courier Fee&apos;) )
												)</errorConditionFormula>
    <errorMessage>This Account is using Courier Service. You can only sell a Courier Commission</errorMessage>
</ValidationRule>